<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_icon"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/restaurant"
        android:enabled="true"
        android:icon="@drawable/ic_restaurant_black_24dp"
        android:title="@string/restaurant_icon"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_icon"
        app:showAsAction="ifRoom"
        />
</menu>