<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_marginTop="16dp">
    <RelativeLayout
        android:id="@+id/montantBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/totalMealsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="TOTAL"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/montantBlock"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="@dimen/cardview_default_radius">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/blockInfoDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    >
                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkboxDelivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:checked="true"/>
                    <TextView
                        android:id="@+id/textToBeDelivred"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_delivery_text"
                        android:layout_toRightOf="@id/checkboxDelivery"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="4dp"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:text="@string/company_delivery_price"
                        android:id="@+id/companyDeliveryPrice"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/livraisonPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/companyDeliveryPrice"
                        android:layout_centerVertical="true"
                        android:text=""
                        android:layout_marginLeft="16dp"
                        android:textStyle="bold"/>
                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/blockInfoDelivery"
                android:layout_marginTop="8dp"/>
            <LinearLayout
                android:id="@+id/clientContactForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                android:layout_below="@id/divider">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">
                    <ImageView
                        android:id="@+id/iconPerson"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person_black_24dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_centerVertical="true"/>
                    <EditText
                        android:id="@+id/clientName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/iconPerson"
                        android:layout_marginRight="16dp"
                        android:hint="@string/user_name"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginTop="16dp">
                    <ImageView
                        android:id="@+id/iconPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_smartphone_black_24dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_centerVertical="true"/>
                    <EditText
                        android:id="@+id/clientContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/iconPhone"
                        android:layout_marginRight="16dp"
                        android:inputType="number"
                        android:hint="@string/user_phone_number"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginTop="16dp">
                    <ImageView
                        android:id="@+id/iconPlace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_place_black_24dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_centerVertical="true"/>
                    <EditText
                        android:id="@+id/clientLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/iconPlace"
                        android:layout_marginRight="16dp"
                        android:hint="@string/user_location_place"
                        />
                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/deliveryNotAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/clientContactForm"
                android:orientation="horizontal"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/deliveryNotAvailableText"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_below="@id/deliveryNotAvailable"
                android:layout_marginTop="16dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                >
<!--                <Button-->
<!--                    android:id="@+id/startMealRequestBtn"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Start my order"-->
<!--                    android:padding="16dp"-->
<!--                    android:background="@color/colorAccent"-->
<!--                    android:textColor="@color/colorWhite"-->
<!--                    />-->
            </RelativeLayout>
        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>